Ckeck answer of the user to pass the level. Added images to some questions.

--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -4,7 +4,7 @@
 			<div class="time-in"></div>
 		</div>
 		<div class="shield" >
-		<!-- Que la url de la imagen sea la que cambie y se maneje por js -->
+			<!-- Que la url de la imagen sea la que cambie y se maneje por js -->
 			<img src="img/logo.png" alt="">
 		</div>
 		<div class="band"></div>
@@ -12,6 +12,9 @@
 			<div class="item item-text-wrap ">
 				{{data.pregunta}}
 			</div>
+		</div>
+		<div class="image" data-ng-if="data.image !== undefined" style="background-image: url('img/imagesQuestions/{{data.image}}.jpg');">
+			
 		</div>
 		<div class="card all-options">
 			<div class="item item-text-wrap answer" data-ng-click = "validateAnswer(data.opciones.opcion1)">
