--- a/www/css/style.css
+++ b/www/css/style.css
@@ -27,6 +27,12 @@ body {
       background: #FAFAFB;
       border-radius: 100px;
       position: absolute; }
+  .body .container-image {
+    text-align: center; }
+    .body .container-image .image {
+      width: 150px;
+      height: 150px;
+      display: inline-block; }
   .body .shield {
     float: right;
     margin: 2px 10px; }
