--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -1,7 +1,9 @@
 // ---------QUESTIONS---------
 
 // Colors background 
-$backgroung1 : #98CCDA; 
+$backgroungPrimerosAuxilios : #98CCDA; 
+$backgroungIncendios: #DC7485;
+$backgroungEvacuacion: #E3AC8E;
 
 // Top bar 
 $band: #EDEEF0;
