--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content>
+  <ion-content class="body">
       <a class="button button-block button-assertive" data-ng-click="registerUser()">Login con Google</a>
   </ion-content>
 </ion-view>
