--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,56 +1,82 @@
-body {
-  position: absolute; }
+.body {
+  background-image: url("../img/background/esteFondo.jpg");
+  background-size: cover; }
 
-.image-fight {
-  text-align: center;
-  position: relative;
-  top: 50%; }
+.body {
+  position: absolute;
+  background-image: url("../img/background/esteFondo.jpg");
+  background-size: cover; }
+  .body .image-fight {
+    text-align: center;
+    position: relative;
+    padding-top: 36%; }
+  .body .button-royal {
+    margin: 18px 40px;
+    background-color: #1d6365;
+    -webkit-box-shadow: -3px 3px 5px 0px #bcfdff;
+    -moz-box-shadow: -3px 3px 5px 0px #bcfdff;
+    box-shadow: -3px 3px 5px 0px #bcfdff; }
 
 .message {
   font-size: 18px; }
 
-.body {
-  background: #98CCDA;
-  background-image: url("../img/texture.png");
+.body.incendios {
+  background: #DC7485;
+  background-image: url("../img/background/textureIncendios.png");
   background-size: cover; }
-  .body .time {
-    height: 60px;
-    width: 60px;
-    margin: 10px;
-    background: #194077;
+
+.body.evacuacion {
+  background: #E3AC8E;
+  background-image: url("../img/background/evacuacionMejor.png");
+  background-size: cover; }
+
+.body.primerosAuxilios {
+  background: #98CCDA;
+  background-image: url("../img/background/texturePrimAuxilios.png");
+  background-size: cover; }
+
+.body .time {
+  height: 60px;
+  width: 60px;
+  margin: 10px;
+  background: #194077;
+  border-radius: 100px;
+  position: absolute; }
+  .body .time .time-in {
+    height: 50px;
+    width: 50px;
+    margin: 5px;
+    background: #FAFAFB;
     border-radius: 100px;
     position: absolute; }
-    .body .time .time-in {
-      height: 50px;
-      width: 50px;
-      margin: 5px;
-      background: #FAFAFB;
-      border-radius: 100px;
-      position: absolute; }
-  .body .container-image {
-    text-align: center; }
-    .body .container-image .image {
-      width: 150px;
-      height: 150px;
-      display: inline-block; }
-  .body .shield {
-    float: right;
-    margin: 2px 10px; }
-  .body .band {
-    background: #EDEEF0;
-    height: 25px; }
-  .body .card {
-    border-radius: 10px; }
-    .body .card.question {
-      -webkit-box-shadow: 0px 2px 0px 2px #96999D;
-      -moz-box-shadow: 0px 2px 0px 2px #96999D;
-      box-shadow: 0px 2px 0px 2px #96999D;
-      margin-top: 78px; }
-    .body .card.all-options {
-      -webkit-box-shadow: 0px 4px 0px 0px #96999D;
-      -moz-box-shadow: 0px 4px 0px 0px #96999D;
-      box-shadow: 0px 4px 0px 0px #96999D;
-      margin: 8px 13px; }
-      .body .card.all-options .answer {
-        background: #EDEEF0;
-        padding: 9px 16px; }
+
+.body .container-image {
+  text-align: center; }
+  .body .container-image .image {
+    width: 150px;
+    height: 150px;
+    display: inline-block; }
+
+.body .shield {
+  float: right;
+  margin: 2px 10px; }
+
+.body .band {
+  background: #EDEEF0;
+  height: 25px; }
+
+.body .card {
+  border-radius: 10px; }
+  .body .card.question {
+    -webkit-box-shadow: 0px 2px 0px 2px #96999D;
+    -moz-box-shadow: 0px 2px 0px 2px #96999D;
+    box-shadow: 0px 2px 0px 2px #96999D;
+    margin-top: 78px; }
+  .body .card.all-options {
+    -webkit-box-shadow: 0px 4px 0px 0px #96999D;
+    -moz-box-shadow: 0px 4px 0px 0px #96999D;
+    box-shadow: 0px 4px 0px 0px #96999D;
+    margin: 8px 13px; }
+    .body .card.all-options .answer {
+      background: #EDEEF0;
+      padding: 9px 16px; }
