Cambios en la textura de las preguntas, en la vista de paso de pregunta, cambio en la letra de todo el proyecto

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import "scss/styles/variables";
+@import "scss/styles/general";
 @import "scss/styles/login";
 @import "scss/styles/menu";
 @import "scss/styles/questions";
+@import "scss/styles/passLevel";
 @import "scss/styles/timer";
