--- a/www/templates/completeQuestion.html
+++ b/www/templates/completeQuestion.html
@@ -1,5 +1,10 @@
 <ion-view>
-	<div>Paso la pregunta</div>
-    <a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Continuar</a>
-    <a class="button button-block button-royal" href="#/menu">Salir</a>
+    <ion-content class="body">
+  		<div > Paso el nivel</div>
+		<div class="buttons">
+			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Continuar</a>
+  	    	<a class="button button-block button-royal" href="#/menu">Salir</a>
+		</div>
+  	    
+	</ion-content>
 </ion-view>
