--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,9 +1,9 @@
 <ion-view>
    	<ion-content class="body">
 	  	<div class="image-fight">
-	  	  <a class="button button-block button-royal" href="#/questions">JUGAR</a>
-	  	  <a class="button button-block button-royal" href="#/Instrucciones">INSTRUCCIONES</a>
-	  	  <a class="button button-block button-royal" href="#/menuMore">MÁS</a>
+	  	  <a class="button button-block button-royal" href="#/questions">Jugar</a>
+	  	  <a class="button button-block button-royal" href="#/Instrucciones">Instrucciones</a>
+	  	  <a class="button button-block button-royal" href="#/menuMore">Más</a>
 	  	</div>
 	</ion-content>
 </ion-view>
