--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -5,7 +5,7 @@
 			<div id="timer" class="timer fill"></div>
 		</div>
 		<div class="shield" >
-			<img ng-src='img/logos/logo {{data.tipo}}.png'>
+			<img ng-src='img/logos/logo {{data.tipo}}2.png'>
 		</div>
 		<div class="band"></div>
 		<div class="card question">
