--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,6 +14,11 @@
     box-shadow: 0px 2px 0px 2px #96999D;
     margin-top: 85px; }
 
+.blockScreen {
+  width: 100%;
+  position: absolute;
+  z-index: 3; }
+
 .body {
   background-image: url("../img/background/esteFondo.jpg");
   background-size: cover;
