--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-view>
    	<ion-content class="body">
 	  	<div class="image-fight">
-	  	  <a class="button button-block button-royal" href="#/questions">Jugar</a>
+	  	  <a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Jugar</a>
 	  	  <a class="button button-block button-royal" href="#/Instrucciones">Instrucciones</a>
 	  	  <a class="button button-block button-royal" href="#/menuMore">Más</a>
 	  	</div>
