--- a/scss/styles/menu.scss
+++ b/scss/styles/menu.scss
@@ -7,13 +7,12 @@
 	  text-align: center;
 	  position: relative;
 	  padding-top: 36%;
-	  font-family: "Roboto-Black";
+	  
 	}
 	.button-royal{
 		margin: 18px 40px;
 		background-color: $colorButtons;
-		font-size: 19px;
-		letter-spacing: 1.2px;
+		@extend .fontsButton;
 		@include box-shadow(-3px 3px 5px 0px rgb(188, 253, 255));
 	}
 }
