--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,6 +6,11 @@
   font-family: "Roboto regular";
   src: url(../fonts/Roboto-Regular.ttf) format("truetype"); }
 
+.fontsButton, .body .button-assertive, .body .button-royal {
+  font-family: "Roboto-Black";
+  font-size: 19px;
+  letter-spacing: 1.2px; }
+
 .card {
   border-radius: 10px; }
   .card.question {
@@ -21,10 +26,19 @@
 
 .body {
   background-image: url("../img/background/esteFondo.jpg");
-  background-size: cover;
-  /**.button.button-assertive{
-		   margin: 90% 40px;
-	}**/ }
+  background-size: cover; }
+  .body .character {
+    width: 55%;
+    margin: 13% 25%; }
+    .body .character img {
+      width: 100%; }
+  .body .button-assertive {
+    margin: 18px 40px; }
+  .body .shields {
+    margin: 10px 20%;
+    width: 62%; }
+    .body .shields img {
+      width: 31%; }
 
 .body {
   position: absolute;
@@ -33,13 +47,10 @@
   .body .image-fight {
     text-align: center;
     position: relative;
-    padding-top: 36%;
-    font-family: "Roboto-Black"; }
+    padding-top: 36%; }
   .body .button-royal {
     margin: 18px 40px;
     background-color: #194F50;
-    font-size: 19px;
-    letter-spacing: 1.2px;
     -webkit-box-shadow: -3px 3px 5px 0px #bcfdff;
     -moz-box-shadow: -3px 3px 5px 0px #bcfdff;
     box-shadow: -3px 3px 5px 0px #bcfdff; }
