--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,13 @@
 <ion-view>
   <ion-content class="body">
-      <a class="button button-block button-assertive" data-ng-click="registerUser()">Login con Google</a>
+  	 <div class="character">
+  	 	<img src="img/personaje.png" alt="">
+  	 </div>
+     <a class="button button-block button-assertive" data-ng-click="registerUser()">Login con Google</a>
+     <div class="shields">
+     	<img src="img/logos/logo evacuación2.png" alt="">
+     	<img src="img/logos/logo incendios2.png" alt="">
+     	<img src="img/logos/logo primeros auxilios2.png" alt="">
+     </div>
   </ion-content>
 </ion-view>
