Added method back button to prevent action back on main view game. Added styles on completeQuestions Init Styles on passLevel

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,4 @@
 @import "scss/styles/questions";
 @import "scss/styles/passLevel";
 @import "scss/styles/timer";
+@import "scss/styles/completeQuestion";
