--- a/scss/styles/general.scss
+++ b/scss/styles/general.scss
@@ -11,3 +11,9 @@
     position: absolute;
     z-index: 3;
 }
+
+.fontsButton{
+	font-family: "Roboto-Black";
+	font-size: 19px;
+	letter-spacing: 1.2px;
+}
