--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,11 +6,6 @@
   font-family: "Roboto regular";
   src: url(../fonts/Roboto-Regular.ttf) format("truetype"); }
 
-.fontsButton, .body .button-assertive, .body .button-royal {
-  font-family: "Roboto-Black";
-  font-size: 19px;
-  letter-spacing: 1.2px; }
-
 .card {
   border-radius: 10px; }
   .card.question {
@@ -23,6 +18,11 @@
   width: 100%;
   position: absolute;
   z-index: 3; }
+
+.fontsButton, .body .button-assertive, .body .button-royal, .barQuestion .infoAnswerQuestion, .cruz .infoCruces {
+  font-family: "Roboto-Black";
+  font-size: 19px;
+  letter-spacing: 1.2px; }
 
 .body {
   background-image: url("../img/background/esteFondo.jpg");
@@ -54,6 +54,8 @@
     -webkit-box-shadow: -3px 3px 5px 0px #bcfdff;
     -moz-box-shadow: -3px 3px 5px 0px #bcfdff;
     box-shadow: -3px 3px 5px 0px #bcfdff; }
+  .body .button.button-royal.active, .body .button.button-royal.activated {
+    background-color: #2F7677; }
 
 .message {
   font-size: 18px; }
@@ -159,3 +161,33 @@
   background-color: #82BEDF;
   width: 1em;
   height: 1em; }
+
+.barQuestion {
+  height: 19px;
+  width: 80%;
+  background: rgba(216, 216, 216, 0.59);
+  margin: 28px 10%;
+  border-radius: 10px; }
+  .barQuestion .infoAnswerQuestion {
+    position: relative;
+    margin: 0 43%;
+    color: #194F50; }
+
+.barAnswer {
+  height: 19px;
+  width: 30%;
+  background: #22f308;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  position: absolute; }
+
+.cruz {
+  background-image: url("../img/background/cruz.png");
+  width: 150px;
+  height: 150px;
+  margin: 13% 25%;
+  background-size: contain; }
+  .cruz .infoCruces {
+    color: #194F50;
+    padding: 68px 63px;
+    font-size: 42px; }
