--- a/www/templates/completeQuestion.html
+++ b/www/templates/completeQuestion.html
@@ -1,10 +1,16 @@
 <ion-view>
-    <ion-content class="body">
-  		<div > Paso el nivel</div>
+		<ion-content class="body">
+			<div class="barQuestion">
+				<div class="barAnswer"></div>
+			<div class="infoAnswerQuestion">3/7</div>
+			</div>
+			<div class="cruz">
+				<div class="infoCruces">7</div>
+			</div>
 		<div class="buttons">
-			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Continuar</a>
-  	    	<a class="button button-block button-royal" href="#/menu">Salir</a>
+			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
+			<a class="button button-block button-royal" href="#/menu">Salir</a>
 		</div>
-  	    
+				
 	</ion-content>
 </ion-view>
