--- a/www/templates/passLevel.html
+++ b/www/templates/passLevel.html
@@ -2,8 +2,8 @@
 	<ion-content class="body">
 	Paso de Nivel
 		<div class="barQuestion">
-			<div class="barAnswer"></div>
-			<div class="infoAnswerQuestion">3/7</div>
+			<div class="barAnswerPass"></div>
+			<div class="infoAnswerQuestion">6/6</div>
 		</div>
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
