--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -1,8 +1,10 @@
 <ion-view>
 	<div id="blockScreen" class="blockScreen"></div>
 	<ion-content class="body {{typeQuestion}} scroll-content ionic-scroll">
-		<div class="time">
-			<div class="time-in"></div>
+		<div class="border-clock">
+			<div class="inside-circle">
+			</div>
+			<div class="middle-circle"><label class="seconds">{{seconds}}</label></div>
 			<div id="timer" class="timer fill"></div>
 		</div>
 		<div class="shield" >
