--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -14,6 +14,12 @@
 	background: $color;
 	background-image: url("../img/background/texture.png");
 	background-size: cover;
+    .timer > #slice > .pie{
+        border: 0.1em solid $color;
+    }
+    .timer.fill > #slice > .pie{
+        background: $color;
+    }
 }
 @mixin box-shadow($info){
 	-webkit-box-shadow: $info;
