--- a/www/templates/completeQuestion.html
+++ b/www/templates/completeQuestion.html
@@ -1,16 +1,15 @@
 <ion-view>
-		<ion-content class="body">
-			<div class="barQuestion">
-				<div class="barAnswer"></div>
-			<div class="infoAnswerQuestion">3/7</div>
-			</div>
-			<div class="cruz">
-				<div class="infoCruces">7</div>
-			</div>
+	<ion-content class="body">
+		<div class="barQuestion">
+			<div class="barAnswer"></div>
+		<div class="infoAnswerQuestion">{{$root.answered.acerts}}/6</div>
+		</div>
+		<div class="cruz">
+			<div class="infoCruces">{{$root.totalQuestios}}</div>
+		</div>
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
 			<a class="button button-block button-royal" href="#/menu">Salir</a>
-		</div>
-				
+		</div>		
 	</ion-content>
 </ion-view>
