Added Icon and Splash Configure config.xml to portrait and min sdk version fixes on login and styles to generate first version

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,9 +5,9 @@
   	 </div>
      <a class="button button-block button-assertive" data-ng-click="registerUser()">Login con Google</a>
      <div class="shields">
-     	<img src="img/logos/logo evacuación2.png" alt="">
-     	<img src="img/logos/logo incendios2.png" alt="">
-     	<img src="img/logos/logo primeros auxilios2.png" alt="">
+     	<img src="img/logos/logoevacuacion2.png" alt="">
+     	<img src="img/logos/logoincendios2.png" alt="">
+     	<img src="img/logos/logoprimerosAuxilios2.png" alt="">
      </div>
   </ion-content>
 </ion-view>
