--- a/www/templates/menuMore.html
+++ b/www/templates/menuMore.html
@@ -1,8 +1,10 @@
 <ion-view>
-	<div class="image-fight">
-		<a class="button button-block button-royal" href="#/trophies">Trofeos</a>
-		<a class="button button-block button-royal" href="#/ranking">Ranking</a>
-		<a class="button button-block button-royal" href="#/About">About</a>
-		<a class="button button-block button-royal" href="#/menu">Atras</a>
-	</div>
+	<ion-content class="body">
+	  	<div class="image-fight">
+	  	  <a class="button button-block button-royal" href="#/menu">Trofeos</a>
+	  	  <a class="button button-block button-royal" href="#/menu">Ranking</a>
+	  	  <a class="button button-block button-royal" href="#/menu">About</a>
+	  	  <a class="button button-block button-royal" href="#/menu">Atras</a>
+	  	</div>
+	</ion-content>
 </ion-view>
