--- a/scss/styles/questions.scss
+++ b/scss/styles/questions.scss
@@ -49,16 +49,21 @@
 	}
 
 	.card{
-		
+		.item-question{
+			font-size: 17px;
+		}
+
 		&.all-options{
 			@include box-shadow(0px 4px 0px 0px #96999D);
-			margin: 8px 13px;
+			margin: 8px 13px 13px;
 			.answer{
-				background: $answers; 
-				padding: 9px 16px;
+				background: $answers;
+				min-height: 55px;
+    			padding: 16px 16px;
+    			font-size: 17px;
 			}
 		}
 	}
-	
+
 }
 
