--- a/www/css/style.css
+++ b/www/css/style.css
@@ -128,14 +128,18 @@
   .body .band {
     background: #EDEEF0;
     height: 25px; }
+  .body .card .item-question {
+    font-size: 17px; }
   .body .card.all-options {
     -webkit-box-shadow: 0px 4px 0px 0px #96999D;
     -moz-box-shadow: 0px 4px 0px 0px #96999D;
     box-shadow: 0px 4px 0px 0px #96999D;
-    margin: 8px 13px; }
+    margin: 8px 13px 13px; }
     .body .card.all-options .answer {
       background: #EDEEF0;
-      padding: 9px 16px; }
+      min-height: 55px;
+      padding: 16px 16px;
+      font-size: 17px; }
 
 .timer {
   position: relative;
