--- a/www/templates/completeQuestion.html
+++ b/www/templates/completeQuestion.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-content class="body">
+	<ion-content class="body" scroll="false">
 		<div class="barQuestion">
 			<div class="barAnswer"></div>
 		<div class="infoAnswerQuestion">{{$root.answered.acerts}}/6</div>
@@ -10,6 +10,6 @@
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
 			<a class="button button-block button-royal" href="#/menu">Salir</a>
-		</div>		
+		</div>
 	</ion-content>
 </ion-view>
