--- a/www/templates/passLevel.html
+++ b/www/templates/passLevel.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-content class="body">
+	<ion-content class="body" scroll="false">
 	Paso de Nivel
 		<div class="barQuestion">
 			<div class="barAnswerPass"></div>
@@ -8,6 +8,6 @@
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
 			<a class="button button-block button-royal" href="#/menu">Salir</a>
-		</div>	
+		</div>
 	</ion-content>
 </ion-view>
