--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -8,18 +8,18 @@
 			<div id="timer" class="timer fill"></div>
 		</div>
 		<div class="shield" >
-			<img ng-src='img/logos/logo {{data.tipo}}2.png'>
+			<img ng-src='img/logos/logo{{typeQuestion}}2.png'>
 		</div>
 		<div class="band"></div>
 		<div class="card question">
-			<div class="item item-text-wrap ">
+			<div class="item item-text-wrap item-question">
 				{{data.pregunta}}
 			</div>
 		</div>
 		<div class="container-image" data-ng-if="data.image !== undefined">
 			<div class="image" style="background-image: url('img/imagesQuestions/{{data.image}}.jpg');"></div>
 		</div>
-		
+
 		<div class="card all-options">
 			<div id="choice1" class="item item-text-wrap answer" data-ng-click = "validateAnswer(data.opciones.opcion1, 'choice1')">
 				{{data.opciones.opcion1}}
