Fixed margin on image pass questions Fixed save session of question when the app is closed

--- a/scss/styles/completeQuestion.scss
+++ b/scss/styles/completeQuestion.scss
@@ -33,10 +33,10 @@
 .cruz{
 	background-image: url("../img/background/cruz.png");
 	width: 150px;
-    height: 150px;
-    margin: 13% 25%;
-    background-size: contain;
-	
+  height: 150px;
+  background-size: contain;
+  margin: 0 auto;
+  
    	.infoCruces{
    		@extend .fontsButton;
    		color: #194F50;
