Init trophies by user

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,4 @@
 @import "scss/styles/passLevel";
 @import "scss/styles/timer";
 @import "scss/styles/completeQuestion";
+@import "scss/styles/trophies";
