--- a/www/templates/menuMore.html
+++ b/www/templates/menuMore.html
@@ -1,7 +1,7 @@
 <ion-view>
 	<ion-content class="body">
 	  	<div class="image-fight">
-	  	  <a class="button button-block button-royal" href="#/menu">Trofeos</a>
+	  	  <a class="button button-block button-royal" href="#/trophies" data-ng-click="$root.reloadTrophies()">Trofeos</a>
 	  	  <a class="button button-block button-royal" href="#/menu">Ranking</a>
 	  	  <a class="button button-block button-royal" href="#/menu">About</a>
 	  	  <a class="button button-block button-royal" href="#/menu">Atras</a>
