Changed style in the template passLevel.html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,4 @@
 @import "scss/styles/timer";
 @import "scss/styles/completeQuestion";
 @import "scss/styles/trophies";
+@import "scss/styles/passLevel";
