--- a/www/templates/passLevel.html
+++ b/www/templates/passLevel.html
@@ -1,9 +1,16 @@
 <ion-view>
 	<ion-content class="body" scroll="false">
-	Paso de Nivel
 		<div class="barQuestion">
 			<div class="barAnswerPass"></div>
 			<div class="infoAnswerQuestion">6/6</div>
+		</div>
+		<div class="character passLevelMargin">
+			<img src="img/personaje.png" alt="">
+		</div>
+		<div class="infoLevel">
+			<h2 class="largeText">Felicidades</h2>
+			<h3 class="smallText">Pasaste al nivel</h3>
+			<h2 class="numberLevel">2</h2>
 		</div>
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
